﻿Subtitle Edit Changelog

3.4.12 (xth March 2016) BETA
* NEW:
   * "mpv" can be now used as video player (has precise seeking) - thx emk2203/aaaxx/lachs0r/rossy
   * Norwegian translation - thx Imre
   * Added new subtitle formats
   * Added option for Bing translate client id/secret in UI
* IMPROVED:
   * Updated Catalan translation - thx juansa
   * updated Bulgarian translation - thx Maknol
   * Updated Basque translation - thx Xabier Aramendi
   * Updated Korean translation - thx domddol
   * Updated Polish translation - thx Admas
   * Updated Portuguese translation - thx moob
   * Updated Mexican translation - thx paconaranjo
   * Updated German/French/Dutch translations - thx xylographe
   * Batch convert: Added VobSub output
   * Point sync: Added "Go to line" (Ctrl+G) - thx ivandrofly
   * Remove text for HI: Added Apply button - thx Splike/ivandrofly
   * Export to FCP+image now allows full frame + bottom border - thx Mathieu
   * Remember (extra) inline styles for TTML 1.0 - thx Oskar   
* FIXED:
   * Several fixes for Find/Count - thx André
   * Saving no longer requires exclusive access (regression from 3.4.11) - thx Whisker72
   * Batch convert: Show FCE settings if "Skip step one" is checked - thx ivandrofly
   * Spell check "change" / "change all" issue regarding dash - thx kurosu
   * Fix for "Spell check" auto-fix name - thx Chamallow
   * Better handling of spell check "Add to names list" (if name modified) - thx Chamallow
   * Fixed crash regarding font in image export - thx r0lZ
   * Fix for (sometimes) not restoring last focused line at startup - thx vmb
   * Fixed bug in handling of inline font tag in ASS format - thx Kyoichi
   * Added missing undo regarding column delete text
   * Allow reading of small PAC files - thx Mike
   * Fixed bug in "Fix invalid italic tags" - thx ivandrofly
   * Fixed allowing random order of json tags - thx fela98
   * Utx won't load text if starts with '#' - thx ivandrofly